<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/steps_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
        android:id="@+id/circular_progress"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginBottom="140dp"
        app:progressStrokeWidth="16dp"
        app:textSize="30sp"
        app:progressBackgroundStrokeWidth="16dp"
        app:progressColor="#06FF3B"
        app:textColor="@color/steps"
        app:drawDot="true"
        app:gradientType="linear"
        app:gradientEndColor="@color/stats"
        app:dotColor="@color/white"
        app:progressBackgroundColor="#252427" />

    <ImageView
        android:id="@+id/step_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="185dp"
        android:src="@drawable/footprint_ic"
        app:tint="@color/steps" />

    <Button
        android:id="@+id/score_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_score_str"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/steps" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="110dp"
        android:text="@string/score_0_str"
        android:textSize="16sp"
        android:textColor="#A8A2AC" />

    <LinearLayout
        android:id="@+id/steps_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_steps_view"
        android:clipToOutline="true"
        android:outlineProvider="background"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/step_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps_0_str"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="50dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_0_str"
                android:textSize="16sp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/calories_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kcal_0_str"
                android:textSize="16sp"
                android:layout_marginStart="20dp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
